<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:id="@+id/guideVerticalStart"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:id="@+id/guideVerticalEnd"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"
        />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideVerticalStart"
        app:layout_constraintEnd_toEndOf="@+id/guideVerticalEnd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btn_edit_profile"
        android:paddingBottom="70dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/first_name"
                android:textAllCaps="true"
                android:textColor="@color/grey"

                >

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:paddingBottom="15dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="5dp"
                android:text="@string/surname"
                android:textAllCaps="true"
                android:textColor="@color/grey"

                >

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:paddingBottom="15dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textAllCaps="true"
                android:paddingStart="5dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/grey"

                >

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="15dp"
                    android:text=""
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="5dp"
                android:text="@string/mobile_number"
                android:textAllCaps="true"
                android:textColor="@color/grey" >

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingBottom="15dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="5dp"
                android:text="@string/address"
                android:textAllCaps="true"
                android:textColor="@color/grey" >

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="text"
                android:maxLines="1"
                android:paddingBottom="15dp"
                android:text=""
                android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:paddingStart="10dp"
                android:text="@string/role"
                android:textAllCaps="true"
                android:textColor="@color/grey"

                />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                
                    android:id="@+id/et_role"
                    android:hint="Admin, Driver, Picker"
                    android:maxLines="1"
                    android:paddingBottom="15dp"
                    android:text=""
                    android:enabled="false"
                    android:clickable="false"
                    android:backgroundTint="@android:color/transparent"
                    android:focusable="false"
                    android:drawablePadding="10dp"
                    android:textColor="@color/grey"
                    />


            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    <android.support.v7.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:id="@+id/btn_edit_profile"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@id/guideHorizontalBottom"
        app:layout_constraintStart_toStartOf="@id/guideVerticalStart"
        app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
        android:layout_marginBottom="10dp"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideHorizontalBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"

        />

</android.support.constraint.ConstraintLayout>